--- a/index.html
+++ b/index.html
@@ -1,69 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Irys Tweet Counter</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Irys Mention Counter</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(135deg, #006d77, #83c5be);
+      color: white;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
       text-align: center;
-      margin: 50px;
-      background-color: #f4f4f9;
     }
+
+    .container {
+      background: rgba(0, 0, 0, 0.3);
+      padding: 2rem;
+      border-radius: 15px;
+      max-width: 400px;
+      width: 90%;
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
+    }
+
+    h1 {
+      font-size: 1.8rem;
+      margin-bottom: 1rem;
+    }
+
     input {
-      padding: 10px;
-      font-size: 16px;
+      width: 100%;
+      padding: 0.8rem;
+      border-radius: 8px;
+      border: none;
+      outline: none;
+      margin-bottom: 1rem;
+      font-size: 1rem;
     }
+
     button {
-      padding: 10px 20px;
-      font-size: 16px;
+      background-color: #ffb703;
+      border: none;
+      padding: 0.8rem 1.2rem;
+      border-radius: 8px;
+      font-size: 1rem;
       cursor: pointer;
-      margin-left: 10px;
+      transition: background 0.3s ease;
+      width: 100%;
     }
+
+    button:hover {
+      background-color: #fb8500;
+    }
+
     #result {
-      margin-top: 20px;
-      font-size: 18px;
+      margin-top: 1rem;
+      font-size: 1.2rem;
       font-weight: bold;
+    }
+
+    footer {
+      margin-top: 1.5rem;
+      font-size: 0.9rem;
+      opacity: 0.8;
+    }
+
+    @media (max-width: 600px) {
+      .container {
+        padding: 1.5rem;
+      }
+      h1 {
+        font-size: 1.4rem;
+      }
+      button {
+        font-size: 0.9rem;
+      }
     }
   </style>
 </head>
 <body>
-  <h1>Irys Tweet Counter</h1>
-  <p>Enter a Twitter username to see how many times they mentioned <strong>@irys_xyz</strong></p>
-  
-  <input type="text" id="username" placeholder="Enter Twitter username" />
-  <button onclick="getTweetCount()">Check Tweets</button>
-
-  <div id="result"></div>
+  <div class="container">
+    <h1>Irys Tweet Counter</h1>
+    <input type="text" id="username" placeholder="Enter Twitter username (without @)">
+    <button onclick="fetchCount()">Check Mentions</button>
+    <div id="result"></div>
+    <footer>Created with love by @lae_gend</footer>
+  </div>
 
   <script>
-    async function getTweetCount() {
+    async function fetchCount() {
       const username = document.getElementById("username").value.trim();
       const resultDiv = document.getElementById("result");
 
       if (!username) {
-        resultDiv.innerText = "⚠️ Please enter a username.";
+        resultDiv.textContent = "Please enter a username.";
         return;
       }
 
+      resultDiv.textContent = "Loading...";
+
       try {
-        resultDiv.innerText = "Fetching tweet count...";
-
-        // Call your backend hosted on Render
-        const response = await fetch(
-          `https://irys-backend.onrender.com/api/fetchTweets?username=${username}`
-        );
-
-        if (!response.ok) {
-          throw new Error("Failed to fetch data from backend");
-        }
-
+        // 🔥 Replace this with your actual Render URL
+        const response = await fetch(`https://irys-backend.onrender.com/count?username=${encodeURIComponent(username)}`);
         const data = await response.json();
-        resultDiv.innerText = `${username} has tweeted about @irys_xyz ${data.count} times.`;
+
+        if (response.ok && typeof data.count === "number") {
+          resultDiv.textContent = `${username} has mentioned @irys_xyz ${data.count} times.`;
+        } else {
+          resultDiv.textContent = data.error || "Something went wrong. Please try again.";
+        }
       } catch (error) {
         console.error(error);
-        resultDiv.innerText = "❌ Error fetching tweet count. Please try again.";
+        resultDiv.textContent = "Error fetching tweets. Try again later.";
       }
     }
   </script>
